--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -1,25 +1,99 @@
-/**
-  |============================
-  | include css partials with
-  | default @import url()
-  |============================
-*/
 @import url('./reset.css');
-@import url('./vite-promo.css');
-@import url('./header.css');
 
-:root {
-  font-family: Inter, Avenir, Helvetica, Arial, sans-serif;
+.feedback-form {
+  display: flex;
+  flex-direction: column;
+  width: 360px;
+  min-height: 152px;
+  padding: 24px;
+}
+
+label {
+  font-family: Montserrat, sans-serif;
   font-size: 16px;
-  line-height: 24px;
   font-weight: 400;
+  line-height: 24px;
+  letter-spacing: 0.04em;
+  text-align: left;
+  margin-bottom: 8px;
+  display: flex;
+  flex-direction: column;
+}
 
-  color: #242424;
-  background-color: rgba(255, 255, 255, 0.87);
+input {
+  border: 1px solid #808080;
+  border-radius: 4px;
+  height: 24px;
+  padding: 8px;
+}
 
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  -webkit-text-size-adjust: 100%;
+input:hover,
+textarea:hover {
+  border: 1px solid #000000;
+}
+
+textarea {
+  border: 1px solid #808080;
+  border-radius: 4px;
+  resize: none;
+  padding: 8px;
+}
+
+button {
+  border-radius: 8px;
+  padding: 8px 16px;
+  width: 86px;
+  height: 40px;
+  background-color: #4e75ff;
+  border: none;
+  color: #ffffff;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.04em;
+  transition: background-color 250ms cubic-bezier(0.215, 0.61, 0.355, 1);
+}
+
+button:hover {
+  background-color: #6c8cff;
+}
+
+
+/* Стилізування галереї з картинками */
+
+ul {
+  list-style: none;
+  padding-left: 0;
+  margin: 0;
+}
+
+.gallery {
+  max-width: 1128px;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  /* Сітка з трьох колонок */
+  gap: 24px;
+  /* Проміжок між елементами */
+  list-style-type: none;
+  /* Видалити маркери списку */
+  padding: 0;
+  margin: 0;
+  cursor: pointer;
+}
+
+.gallery li img {
+  display: block;
+  max-width: 100%;
+  max-height: 100%;
+  object-fit: cover;
+  /* Збереження пропорцій зображення */
+  transition: transform 0.3s ease;
+  /* Додає плавний перехід для трансформації */
+}
+
+
+
+.gallery li img:hover {
+  transform: scale(1.2);
+  /* Збільшує зображення на 20% */
 }
